--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@
     --tracking-wide: 0.025em;
     --tracking-widest: 0.1em;
     --leading-tight: 1.25;
+    --leading-normal: 1.5;
     --leading-relaxed: 1.625;
+    --leading-loose: 2;
     --radius-lg: 0.5rem;
     --radius-xl: 0.75rem;
     --radius-2xl: 1rem;
@@ -219,6 +221,9 @@
   .relative {
     position: relative;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
   .top-1 {
     top: calc(var(--spacing) * 1);
   }
@@ -230,9 +235,6 @@
   }
   .left-3 {
     left: calc(var(--spacing) * 3);
-  }
-  .z-10 {
-    z-index: 10;
   }
   .container {
     width: 100%;
@@ -264,20 +266,32 @@
   .my-6 {
     margin-block: calc(var(--spacing) * 6);
   }
+  .my-\[43px\] {
+    margin-block: 43px;
+  }
   .my-\[52px\] {
     margin-block: 52px;
   }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
+  }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
   .mt-\[52px\] {
     margin-top: 52px;
+  }
+  .mt-\[70px\] {
+    margin-top: 70px;
   }
   .mr-9 {
     margin-right: calc(var(--spacing) * 9);
@@ -309,11 +323,14 @@
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
+  .mb-8\.5 {
+    margin-bottom: calc(var(--spacing) * 8.5);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
   .mb-11 {
     margin-bottom: calc(var(--spacing) * 11);
-  }
-  .mb-16 {
-    margin-bottom: calc(var(--spacing) * 16);
   }
   .mb-\[7px\] {
     margin-bottom: 7px;
@@ -327,9 +344,6 @@
   .mb-\[23px\] {
     margin-bottom: 23px;
   }
-  .mb-\[32px\] {
-    margin-bottom: 32px;
-  }
   .mb-\[39px\] {
     margin-bottom: 39px;
   }
@@ -338,6 +352,9 @@
   }
   .mb-\[100px\] {
     margin-bottom: 100px;
+  }
+  .ml-1 {
+    margin-left: calc(var(--spacing) * 1);
   }
   .ml-80 {
     margin-left: calc(var(--spacing) * 80);
@@ -360,9 +377,6 @@
   .table {
     display: table;
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
   .h-5 {
     height: calc(var(--spacing) * 5);
   }
@@ -383,9 +397,6 @@
   }
   .h-20 {
     height: calc(var(--spacing) * 20);
-  }
-  .h-25 {
-    height: calc(var(--spacing) * 25);
   }
   .h-28 {
     height: calc(var(--spacing) * 28);
@@ -414,20 +425,23 @@
   .h-\[63px\] {
     height: 63px;
   }
-  .h-\[65\] {
-    height: 65;
-  }
   .h-\[65px\] {
     height: 65px;
   }
   .h-\[66px\] {
     height: 66px;
   }
+  .h-\[68px\] {
+    height: 68px;
+  }
   .h-\[75px\] {
     height: 75px;
   }
   .h-\[88px\] {
     height: 88px;
+  }
+  .h-\[90px\] {
+    height: 90px;
   }
   .h-\[100px\] {
     height: 100px;
@@ -444,6 +458,9 @@
   .h-\[117px\] {
     height: 117px;
   }
+  .h-\[140px\] {
+    height: 140px;
+  }
   .h-\[154px\] {
     height: 154px;
   }
@@ -453,20 +470,26 @@
   .h-\[353px\] {
     height: 353px;
   }
+  .h-\[384px\] {
+    height: 384px;
+  }
   .h-\[414px\] {
     height: 414px;
   }
   .h-\[418px\] {
     height: 418px;
   }
+  .h-\[420px\] {
+    height: 420px;
+  }
+  .h-\[470px\] {
+    height: 470px;
+  }
   .h-\[495px\] {
     height: 495px;
   }
   .h-\[496px\] {
     height: 496px;
-  }
-  .h-\[529\] {
-    height: 529;
   }
   .h-\[529px\] {
     height: 529px;
@@ -476,12 +499,6 @@
   }
   .h-\[560px\] {
     height: 560px;
-  }
-  .h-\[610\] {
-    height: 610;
-  }
-  .h-\[610p\] {
-    height: 610p;
   }
   .h-\[610px\] {
     height: 610px;
@@ -498,8 +515,14 @@
   .h-\[700px\] {
     height: 700px;
   }
+  .h-\[770px\] {
+    height: 770px;
+  }
   .h-\[833px\] {
     height: 833px;
+  }
+  .h-\[868px\] {
+    height: 868px;
   }
   .h-\[898px\] {
     height: 898px;
@@ -525,14 +548,20 @@
   .w-7xl {
     width: var(--container-7xl);
   }
-  .w-14 {
-    width: calc(var(--spacing) * 14);
+  .w-8 {
+    width: calc(var(--spacing) * 8);
+  }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
+  .w-20 {
+    width: calc(var(--spacing) * 20);
   }
   .w-25 {
     width: calc(var(--spacing) * 25);
   }
-  .w-225 {
-    width: calc(var(--spacing) * 225);
+  .w-\[1\] {
+    width: 1;
   }
   .w-\[65px\] {
     width: 65px;
@@ -573,6 +602,9 @@
   .w-\[336px\] {
     width: 336px;
   }
+  .w-\[337px\] {
+    width: 337px;
+  }
   .w-\[384px\] {
     width: 384px;
   }
@@ -582,14 +614,17 @@
   .w-\[510px\] {
     width: 510px;
   }
+  .w-\[542px\] {
+    width: 542px;
+  }
   .w-\[545px\] {
     width: 545px;
   }
-  .w-\[547\] {
-    width: 547;
-  }
   .w-\[547px\] {
     width: 547px;
+  }
+  .w-\[583px\] {
+    width: 583px;
   }
   .w-\[594px\] {
     width: 594px;
@@ -606,14 +641,20 @@
   .w-\[1010px\] {
     width: 1010px;
   }
-  .w-\[1200\] {
-    width: 1200;
+  .w-\[1120px\] {
+    width: 1120px;
+  }
+  .w-\[1170px\] {
+    width: 1170px;
   }
   .w-\[1200px\] {
     width: 1200px;
   }
   .w-\[1328px\] {
     width: 1328px;
+  }
+  .w-\[1440px\] {
+    width: 1440px;
   }
   .w-\[1448px\] {
     width: 1448px;
@@ -624,6 +665,9 @@
   .w-\[1682px\] {
     width: 1682px;
   }
+  .w-\[1920\] {
+    width: 1920;
+  }
   .w-\[1920px\] {
     width: 1920px;
   }
@@ -632,9 +676,6 @@
   }
   .w-xl {
     width: var(--container-xl);
-  }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
   }
   .max-w-3xl {
     max-width: var(--container-3xl);
@@ -682,6 +723,9 @@
   }
   .flex-col {
     flex-direction: column;
+  }
+  .items-baseline-last {
+    align-items: last baseline;
   }
   .items-center {
     align-items: center;
@@ -734,8 +778,18 @@
   .gap-\[129px\] {
     gap: 129px;
   }
+  .gap-\[145px\] {
+    gap: 145px;
+  }
   .gap-\[651px\] {
     gap: 651px;
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .space-y-12 {
     :where(& > :not(:last-child)) {
@@ -765,6 +819,9 @@
   }
   .rounded-\[5px\] {
     border-radius: 5px;
+  }
+  .rounded-\[12px\] {
+    border-radius: 12px;
   }
   .rounded-\[40px\] {
     border-radius: 40px;
@@ -810,8 +867,8 @@
   .border-pink-200 {
     border-color: var(--color-pink-200);
   }
-  .border-pink-300 {
-    border-color: var(--color-pink-300);
+  .border-pink-400 {
+    border-color: var(--color-pink-400);
   }
   .bg-\[\#3F2539\] {
     background-color: #3F2539;
@@ -830,12 +887,6 @@
   }
   .bg-\[\#EBF3F5\] {
     background-color: #EBF3F5;
-  }
-  .bg-\[\#F7E5C1\] {
-    background-color: #F7E5C1;
-  }
-  .bg-\[\#FBF2E2\] {
-    background-color: #FBF2E2;
   }
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
@@ -858,9 +909,6 @@
   .bg-black {
     background-color: var(--color-black);
   }
-  .bg-pink-50 {
-    background-color: var(--color-pink-50);
-  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -875,9 +923,6 @@
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
-  }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
   }
   .container {
     padding-inline: 120px;
@@ -894,9 +939,6 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
-  .px-9 {
-    padding-inline: calc(var(--spacing) * 9);
-  }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
@@ -909,9 +951,6 @@
   .px-\[60px\] {
     padding-inline: 60px;
   }
-  .px-\[72\] {
-    padding-inline: 72;
-  }
   .px-\[72px\] {
     padding-inline: 72px;
   }
@@ -921,6 +960,9 @@
   .px-\[111px\] {
     padding-inline: 111px;
   }
+  .px-\[113px\] {
+    padding-inline: 113px;
+  }
   .px-\[117px\] {
     padding-inline: 117px;
   }
@@ -929,6 +971,9 @@
   }
   .px-\[120px\] {
     padding-inline: 120px;
+  }
+  .px-\[135px\] {
+    padding-inline: 135px;
   }
   .px-\[201px\] {
     padding-inline: 201px;
@@ -948,6 +993,9 @@
   .py-3\.5 {
     padding-block: calc(var(--spacing) * 3.5);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
@@ -956,9 +1004,6 @@
   }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
-  }
-  .py-9 {
-    padding-block: calc(var(--spacing) * 9);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
@@ -975,14 +1020,14 @@
   .py-\[30px\] {
     padding-block: 30px;
   }
+  .py-\[53px\] {
+    padding-block: 53px;
+  }
   .py-\[63px\] {
     padding-block: 63px;
   }
   .py-\[66px\] {
     padding-block: 66px;
-  }
-  .py-\[74\] {
-    padding-block: 74;
   }
   .py-\[74px\] {
     padding-block: 74px;
@@ -1008,14 +1053,17 @@
   .py-\[120px\] {
     padding-block: 120px;
   }
-  .py-\[126px\] {
-    padding-block: 126px;
-  }
-  .py-\[136px\] {
-    padding-block: 136px;
+  .py-\[150px\] {
+    padding-block: 150px;
   }
   .py-\[166px\] {
     padding-block: 166px;
+  }
+  .py-\[189\] {
+    padding-block: 189;
+  }
+  .py-\[189px\] {
+    padding-block: 189px;
   }
   .py-\[207px\] {
     padding-block: 207px;
@@ -1052,9 +1100,6 @@
   }
   .pb-\[118px\] {
     padding-bottom: 118px;
-  }
-  .pb-\[184\] {
-    padding-bottom: 184;
   }
   .pb-\[184px\] {
     padding-bottom: 184px;
@@ -1134,6 +1179,9 @@
   .text-\[45px\] {
     font-size: 45px;
   }
+  .text-\[50px\] {
+    font-size: 50px;
+  }
   .text-\[55px\] {
     font-size: 55px;
   }
@@ -1172,9 +1220,9 @@
     --tw-leading: calc(var(--spacing) * 20);
     line-height: calc(var(--spacing) * 20);
   }
-  .leading-\[1\.1\.\] {
-    --tw-leading: 1.1.;
-    line-height: 1.1.;
+  .leading-\[1\.0\] {
+    --tw-leading: 1.0;
+    line-height: 1.0;
   }
   .leading-\[1\.2\] {
     --tw-leading: 1.2;
@@ -1188,25 +1236,49 @@
     --tw-leading: 1.7;
     line-height: 1.7;
   }
-  .leading-\[1\.25\] {
-    --tw-leading: 1.25;
-    line-height: 1.25;
-  }
   .leading-\[1\.30\] {
     --tw-leading: 1.30;
     line-height: 1.30;
   }
-  .leading-\[1\.54\] {
-    --tw-leading: 1.54;
-    line-height: 1.54;
+  .leading-\[1\.50\] {
+    --tw-leading: 1.50;
+    line-height: 1.50;
+  }
+  .leading-\[1\.70\] {
+    --tw-leading: 1.70;
+    line-height: 1.70;
   }
   .leading-\[1\.75\] {
     --tw-leading: 1.75;
     line-height: 1.75;
   }
+  .leading-\[1\.544\] {
+    --tw-leading: 1.544;
+    line-height: 1.544;
+  }
   .leading-\[1\.545\] {
     --tw-leading: 1.545;
     line-height: 1.545;
+  }
+  .leading-\[1\.750\] {
+    --tw-leading: 1.750;
+    line-height: 1.750;
+  }
+  .leading-\[1\.\] {
+    --tw-leading: 1.;
+    line-height: 1.;
+  }
+  .leading-\[1\] {
+    --tw-leading: 1;
+    line-height: 1;
+  }
+  .leading-\[2\.00\] {
+    --tw-leading: 2.00;
+    line-height: 2.00;
+  }
+  .leading-\[28px\] {
+    --tw-leading: 28px;
+    line-height: 28px;
   }
   .leading-\[30px\] {
     --tw-leading: 30px;
@@ -1215,6 +1287,18 @@
   .leading-\[60px\] {
     --tw-leading: 60px;
     line-height: 60px;
+  }
+  .leading-\[70px\] {
+    --tw-leading: 70px;
+    line-height: 70px;
+  }
+  .leading-loose {
+    --tw-leading: var(--leading-loose);
+    line-height: var(--leading-loose);
+  }
+  .leading-normal {
+    --tw-leading: var(--leading-normal);
+    line-height: var(--leading-normal);
   }
   .leading-relaxed {
     --tw-leading: var(--leading-relaxed);
@@ -1252,13 +1336,13 @@
     --tw-tracking: calc(2px * -1);
     letter-spacing: calc(2px * -1);
   }
-  .tracking-\[-0\.0\] {
-    --tw-tracking: -0.0;
-    letter-spacing: -0.0;
-  }
   .tracking-\[-0\.001rem\] {
     --tw-tracking: -0.001rem;
     letter-spacing: -0.001rem;
+  }
+  .tracking-\[-0\.01\] {
+    --tw-tracking: -0.01;
+    letter-spacing: -0.01;
   }
   .tracking-\[-0\.01em\] {
     --tw-tracking: -0.01em;
@@ -1268,9 +1352,13 @@
     --tw-tracking: -0.01rem;
     letter-spacing: -0.01rem;
   }
-  .tracking-\[0\.0\] {
-    --tw-tracking: 0.0;
-    letter-spacing: 0.0;
+  .tracking-\[-0\] {
+    --tw-tracking: -0;
+    letter-spacing: -0;
+  }
+  .tracking-\[-\] {
+    --tw-tracking: -;
+    letter-spacing: -;
   }
   .tracking-\[0\.01\] {
     --tw-tracking: 0.01;
@@ -1288,13 +1376,13 @@
     --tw-tracking: 0.006rem;
     letter-spacing: 0.006rem;
   }
-  .tracking-\[0\.012\] {
-    --tw-tracking: 0.012;
-    letter-spacing: 0.012;
-  }
   .tracking-\[0\.012rem\] {
     --tw-tracking: 0.012rem;
     letter-spacing: 0.012rem;
+  }
+  .tracking-\[0\.\] {
+    --tw-tracking: 0.;
+    letter-spacing: 0.;
   }
   .tracking-\[3px\] {
     --tw-tracking: 3px;
@@ -1307,9 +1395,6 @@
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
-  }
-  .text-\[\#\#f7e5c1\] {
-    color: ##f7e5c1;
   }
   .text-\[\#0f0000\] {
     color: #0f0000;
@@ -1338,9 +1423,6 @@
   .text-\[\#FFFFFF\] {
     color: #FFFFFF;
   }
-  .text-\[\#\] {
-    color: #;
-  }
   .text-\[\#ba7894\] {
     color: #ba7894;
   }
@@ -1353,26 +1435,26 @@
   .text-\[\#fffefa\] {
     color: #fffefa;
   }
-  .text-\[\$\] {
-    color: $;
-  }
   .text-\[15\] {
     color: 15;
   }
   .text-\[18\] {
     color: 18;
   }
-  .text-\[light\] {
-    color: light;
+  .text-\[22\] {
+    color: 22;
+  }
+  .text-\[45\] {
+    color: 45;
   }
   .text-\[wheat\] {
     color: wheat;
   }
-  .text-\[whi\] {
-    color: whi;
-  }
   .text-\[white\] {
     color: white;
+  }
+  .text-black {
+    color: var(--color-black);
   }
   .text-gray-500 {
     color: var(--color-gray-500);
@@ -1380,11 +1462,11 @@
   .text-gray-600 {
     color: var(--color-gray-600);
   }
+  .text-gray-800 {
+    color: var(--color-gray-800);
+  }
   .text-gray-900 {
     color: var(--color-gray-900);
-  }
-  .text-pink-300 {
-    color: var(--color-pink-300);
   }
   .text-pink-400 {
     color: var(--color-pink-400);
@@ -1395,12 +1477,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-white\/80 {
-    color: color-mix(in srgb, #fff 80%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      color: color-mix(in oklab, var(--color-white) 80%, transparent);
-    }
-  }
   .uppercase {
     text-transform: uppercase;
   }
@@ -1409,6 +1485,10 @@
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-sm {
@@ -1476,9 +1556,9 @@
       line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
-  .lg\:-mr-24 {
+  .lg\:h-full {
     @media (width >= 64rem) {
-      margin-right: calc(var(--spacing) * -24);
+      height: 100%;
     }
   }
   .lg\:grid-cols-2 {
@@ -1489,11 +1569,6 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
-    }
-  }
-  .lg\:p-16 {
-    @media (width >= 64rem) {
-      padding: calc(var(--spacing) * 16);
     }
   }
 }
